Fix buttons text wrapping

--- a/style.css
+++ b/style.css
@@ -162,10 +162,6 @@ h1 {
   outline-width: 0;
   align-self: center;
   border: 0;
-  height: 48px;
-  width: 153px;
-  left: 99px;
-  top: 290px;
   border-radius: 4px;
   padding: 12px;
   font-family: 'Inter', sans-serif;
@@ -356,8 +352,6 @@ h1 {
   outline-width: 0;
   align-self: center;
   border: 0;
-  height: 48px;
-  width: 122px;
   border-radius: 4px;
   padding: 12px;
   font-family: "Inter", sans-serif;
